--- a/Course/AndroidManifest.xml
+++ b/Course/AndroidManifest.xml
@@ -4,14 +4,26 @@
     android:versionCode="1"
     android:versionName="1.0" >
     
+    <uses-sdk
+        android:minSdkVersion="11"
+        android:targetSdkVersion="17" />
+  
+    <!-- Used tutorial: www.lynda.com, "Building Mobile Apps with Google Maps Android API v2" -->
+    <permission 
+        android:name="edu.westmont.course.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+    
+    <uses-permission android:name="edu.westmont.course.permission.MAPS_RECEIVE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-
-    <uses-sdk
-        android:minSdkVersion="11"
-        android:targetSdkVersion="18" />
-
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    
+    <uses-feature android:glEsVersion="0x00020000"
+        android:required="true"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -35,6 +47,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="edu.westmont.course.MainActivity" />
         </activity>
+        
+        <meta-data 
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyA2cRJz9ENzrAe_GEuCqHAWrEQuhUHiTjw"/>
+        
     </application>
 
 </manifest>
