Added object to calculate total distance traveled and time elapsed

--- a/Course/AndroidManifest.xml
+++ b/Course/AndroidManifest.xml
@@ -50,6 +50,8 @@
         
          <activity
             android:name="edu.westmont.course.LocationChanger" />
+         <activity
+            android:name="edu.westmont.course.DistanceFinder" />
 
             
         <meta-data 
