Added detail view for each point on the map

--- a/Course/AndroidManifest.xml
+++ b/Course/AndroidManifest.xml
@@ -39,6 +39,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="edu.westmont.course.DrawMap"
+            android:label="@string/title_activity_draw_map"
+            android:parentActivityName="edu.westmont.course.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="edu.westmont.course.MainActivity" />
+        </activity>
 
         <!-- CREDIT TO http://www.vogella.com for some of this activity code -->
         <activity
@@ -48,19 +56,13 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="edu.westmont.course.MainActivity" />
-        </activity> 
-         <activity
-            android:name="edu.westmont.course.LocationChanger" />
-         <activity
-            android:name="edu.westmont.course.DistanceFinder" />
+        </activity>
+        <activity android:name="edu.westmont.course.LocationChanger" />
+        <activity android:name="edu.westmont.course.DistanceFinder" />
+       
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyA2cRJz9ENzrAe_GEuCqHAWrEQuhUHiTjw" />
-
-        <activity
-            android:name="edu.westmont.course.DrawMap"
-            android:label="@string/title_activity_draw_map" >
-        </activity>
     </application>
 
 </manifest>
