--- a/Course/AndroidManifest.xml
+++ b/Course/AndroidManifest.xml
@@ -59,10 +59,15 @@
         </activity>
         <activity android:name="edu.westmont.course.LocationChanger" />
         <activity android:name="edu.westmont.course.DistanceFinder" />
-       
+
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyA2cRJz9ENzrAe_GEuCqHAWrEQuhUHiTjw" />
+
+        <activity
+            android:name="edu.westmont.course.RunStatistics"
+            android:label="@string/title_activity_run_statistics" >
+        </activity>
     </application>
 
 </manifest>
