Added activity to display a list; loads Map with selected name

--- a/Course/AndroidManifest.xml
+++ b/Course/AndroidManifest.xml
@@ -68,6 +68,20 @@
             android:name="edu.westmont.course.RunStatistics"
             android:label="@string/title_activity_run_statistics" >
         </activity>
+        <activity
+            android:name="edu.westmont.course.List_Activity"
+            android:label="list_activity_name"
+            android:parentActivityName="edu.westmont.course.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="edu.westmont.course.MainActivity" />
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
