New option menu for deleting previous routes

--- a/Course/AndroidManifest.xml
+++ b/Course/AndroidManifest.xml
@@ -82,6 +82,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="edu.westmont.course.DeleteList"
+            android:label="@string/activity_delete_route_list"
+            android:parentActivityName="edu.westmont.course.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="edu.westmont.course.MainActivity" />
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
